contabo-eu/apps/livekit/stunner-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: livekit-gatewayclass
spec:
  controllerName: "stunner.l7mp.io/gateway-operator"
  parametersRef:
    group: "stunner.l7mp.io"
    kind: GatewayConfig
    name: livekit-gatewayconfig
    namespace: livekit
  description: "STUNner is a WebRTC ingress gateway for Kubernetes"
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: udp-gateway
  namespace: livekit
spec:
  gatewayClassName: livekit-gatewayclass
  listeners:
    - name: default-listener
      port: 3378
      protocol: UDP
